simplified forlder structure

--- a/Server/development.ini
+++ b/Server/development.ini
@@ -1,40 +1,20 @@
-###
-# app configuration
-# https://docs.pylonsproject.org/projects/pyramid/en/1.10-branch/narr/environment.html
-###
-
 [app:main]
-use = egg:Server
-
+use = egg:services
 pyramid.reload_templates = true
-pyramid.debug_authorization = false
-pyramid.debug_notfound = false
-pyramid.debug_routematch = false
-pyramid.default_locale_name = en
-pyramid.includes =
-    pyramid_debugtoolbar
-
-sqlalchemy.url = sqlite:///%(here)s/Server.sqlite
-
-# By default, the toolbar only appears for clients from IP addresses
-# '127.0.0.1' and '::1'.
-# debugtoolbar.hosts = 127.0.0.1 ::1
-
-###
-# wsgi server configuration
-###
+pyramid.includes = pyramid_tm
+sqlalchemy.url = mysql+pymysql://root:admin@localhost/checkers_game
 
 [server:main]
 use = egg:waitress#main
 listen = localhost:6543
 
-###
-# logging configuration
-# https://docs.pylonsproject.org/projects/pyramid/en/1.10-branch/narr/logging.html
-###
-
 [loggers]
-keys = root, server, sqlalchemy
+keys = root, services, sqlalchemy.engine.base.Engine
+
+[logger_services]
+level = DEBUG
+handlers =
+qualname = services
 
 [handlers]
 keys = console
@@ -46,18 +26,10 @@ keys = generic
 level = INFO
 handlers = console
 
-[logger_server]
-level = DEBUG
-handlers =
-qualname = server
-
-[logger_sqlalchemy]
+[logger_sqlalchemy.engine.base.Engine]
 level = INFO
 handlers =
-qualname = sqlalchemy.engine
-# "level = INFO" logs SQL queries.
-# "level = DEBUG" logs SQL queries and results.
-# "level = WARN" logs neither.  (Recommended for production systems.)
+qualname = sqlalchemy.engine.base.Engine
 
 [handler_console]
 class = StreamHandler
@@ -66,4 +38,4 @@ level = NOTSET
 formatter = generic
 
 [formatter_generic]
-format = %(asctime)s %(levelname)-5.5s [%(name)s:%(lineno)s][%(threadName)s] %(message)s
+format = %(asctime)s %(levelname)-5.5s [%(name)s][%(threadName)s] %(message)s
