--- a/Server/Pipfile
+++ b/Server/Pipfile
@@ -3,10 +3,9 @@ name = "pypi"
 url = "https://pypi.org/simple"
 verify_ssl = true
 
-[dev-packages]
-
 [packages]
-pyramid = "*"
+jsonpickle = "*"
+services = {editable = true,path = "."}
 
 [requires]
 python_version = "3.7"
